<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="#FFFDD0"
    android:id="@+id/main"
    >

    <!-- Logo -->

    <ImageView
        android:id="@+id/logo"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_background"
        android:clipToOutline="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newHere"
        android:gravity="center"

        />

    <!--Sign up button-->
    <Button
        android:id="@+id/btnSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Signup"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:backgroundTint="#fdbbaf"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/backAgain"
        android:gravity="center"
        android:fontFamily=""
        />

    <!--Login button-->

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textSize="18sp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:backgroundTint="#B16740"
        />




</LinearLayout>